server paths made universal